fixed some sentences

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#services">Skills</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
@@ -87,9 +87,8 @@
                     <!-- <hr class="light"> -->
                     <p class="text-faded">
                         Before I decided to become a Full-Stack Web Developer, I worked in a correctional facility for the County that I lived in.
-                        Working there, I gained an important leadership role that I did not have before. I am also able to solve problems under stress with ease aswell.
-                        <br/>
-                        Needs fixing 
+                        Working there, I gained an important leadership skills that I did not have before. I am also able to solve problems under stress with ease as well.
+                        
                     </p>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">My Skills</a>
                 </div>
